--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollToPlugin.min.js"></script>
 
 		<!-- Custom Styles & Configuration -->
-		<link rel="stylesheet" href="index.css" />
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body class="bg-zinc-100 text-zinc-900">
 		<div class="cursor"></div>
