--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollToPlugin.min.js"></script>
+		<!-- Link to my js file -->
+		<script src="script.js" defer></script>
 
 		<!-- Custom Styles & Configuration -->
-		<link rel="stylesheet" href="index.css" />
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body class="bg-zinc-100 text-zinc-900">
 		<div class="cursor"></div>
