fix: Update project descriptions and enhance clarity in A/B testing initiatives

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 						/> -->
 						<!-- Subtitle at the bottom-right -->
 						<p id="hero-subtitle" class="text-xl text-zinc-600 mt-4">
-							Specialized in A/B testing, data analytics, tag management, and utilizing cutting-edge technologies 😉
+							Specialized in A/B testing, data analytics, javascript, API integration and utilizing cutting-edge
+							technologies 😉
 						</p>
 					</div>
 				</div>
@@ -423,9 +424,9 @@
 					<div class="project-card bg-white p-8 rounded-lg border border-zinc-200">
 						<h3 class="text-2xl font-bold mb-2">Organizational A/B Testing Framework</h3>
 						<p class="text-zinc-600 mb-4">
-							Initiated and organized an organizational A/B testing setup to structure the implementation of A/B testing
-							as a tool outside of dedicated software, fostering collaboration, knowledge sharing, and insight
-							gathering.
+							Established an organizational A/B testing program to formalize testing as a growth strategy and tool. This
+							initiative fostered cross-functional collaboration, improved knowledge sharing, and facilitated deeper
+							insight gathering.
 						</p>
 						<div class="flex flex-wrap gap-2">
 							<span class="tech-tag">A/B Testing</span><span class="tech-tag">Organizational Change</span
@@ -434,27 +435,28 @@
 					</div>
 					<!-- Project Card -->
 					<div class="project-card bg-white p-8 rounded-lg border border-zinc-200">
-						<h3 class="text-2xl font-bold mb-2">Server-Side Marketing Tracking</h3>
+						<h3 class="text-2xl font-bold mb-2">Centralized Chatbot Logic</h3>
 						<p class="text-zinc-600 mb-4">
-							Moved essential marketing tracking from client-side to server-side, resulting in a more compliant,
-							controlled, and reliable data collection implementation.
+							Engineered a centralized chatbot logic system for Tryg Group's customer-facing applications (DK, SE, NO),
+							resulting in a leaner, more cost-effective, and easily controllable implementation with enhanced tracking
+							and A/B testing capabilities.
 						</p>
 						<div class="flex flex-wrap gap-2">
-							<span class="tech-tag">Compliance</span><span class="tech-tag">AudienceStream</span>
-							<span class="tech-tag">Customer Segmentation</span>
+							<span class="tech-tag">UI Design</span><span class="tech-tag">API Integration</span
+							><span class="tech-tag">JavaScript</span><span class="tech-tag">Tealium iQ</span>
 						</div>
 					</div>
 					<!-- Project Card -->
 					<div class="project-card bg-white p-8 rounded-lg border border-zinc-200">
-						<h3 class="text-2xl font-bold mb-2">A/B Testing Framework Design and Execution</h3>
+						<h3 class="text-2xl font-bold mb-2">CDP and Server-Side Marketing Tracking</h3>
 						<p class="text-zinc-600 mb-4">
-							Streamlined end-to-end A/B testing in complex SPAs by building a custom vanilla JavaScript framework that
-							accelerated development cycles by 2x and provided full control over test parameters and thereby better
-							analytics.
+							Leveraged CDP capabilities to transition essential marketing tracking from client-side to server-side.
+							This resulted in a more compliant, controlled, and reliable data collection implementation, optimizing the
+							foundation for precise lead generation and segmentation.
 						</p>
 						<div class="flex flex-wrap gap-2">
-							<span class="tech-tag">A/B Testing</span><span class="tech-tag">Tealium iQ</span
-							><span class="tech-tag">JavaScript</span><span class="tech-tag">CRO</span>
+							<span class="tech-tag">Compliance</span><span class="tech-tag">AudienceStream</span>
+							<span class="tech-tag">Customer Segmentation</span>
 						</div>
 					</div>
 					<!-- Project Card -->
@@ -470,19 +472,19 @@
 							><span class="tech-tag">Adobe Analytics</span>
 						</div>
 					</div>
-					<!-- Project Card -->
+					<!-- Project Card
 					<div class="project-card bg-white p-8 rounded-lg border border-zinc-200">
-						<h3 class="text-2xl font-bold mb-2">Centralized Chatbot Logic</h3>
+						<h3 class="text-2xl font-bold mb-2">A/B Testing Framework Design and Execution</h3>
 						<p class="text-zinc-600 mb-4">
-							Engineered a centralized chatbot logic system for all Tryg NO applications using boost.ai, resulting in a
-							leaner, more cost-effective, and easily controllable implementation with enhanced A/B testing
-							capabilities.
+							Streamlined end-to-end A/B testing in complex SPAs by building a custom vanilla JavaScript framework that
+							accelerated development cycles by 2x and provided full control over test parameters and thereby better
+							analytics.
 						</p>
 						<div class="flex flex-wrap gap-2">
-							<span class="tech-tag">Chatbot</span><span class="tech-tag">Boost.ai</span
-							><span class="tech-tag">JavaScript</span><span class="tech-tag">Tealium iQ</span>
+							<span class="tech-tag">A/B Testing</span><span class="tech-tag">Tealium iQ</span
+							><span class="tech-tag">JavaScript</span><span class="tech-tag">CRO</span>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</section>
 
@@ -532,6 +534,5 @@
 		</main>
 
 		<!-- JavaScript for Interactions -->
-		<script src="script.js"></script>
 	</body>
 </html>
