fix: Correct stylesheet link from style.css to index.css

--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 						About Me
 					</h2> -->
 					<p class="text-4xl font-light leading-snug">
-						I am a Marketing Technology specialist with a passion for leveraging data and automation to drive marketing
-						efficiency. I specialize in implementing robust analytics solutions, integrating APIs, and designing A/B
-						testing frameworks from the ground up, driving conversion rate optimization while saving on expensive
-						third-party software.
+						Marketing Technology Developer passionate about driving organizational change with data and automation. I
+						specialize in implementing robust analytics (Tealium IQ, Adobe Analytics, server-side tracking, CDP),
+						integrating APIs, and building A/B testing frameworks to foster conversion rate optimization and cost
+						efficiency.
 					</p>
 				</div>
 			</section>
@@ -232,7 +232,7 @@
 							<!-- Education Item -->
 							<div class="bg-white p-6 rounded-lg border border-zinc-200">
 								<p class="text-sm font-medium text-zinc-500">2017 - 2019</p>
-								<h3 class="text-2xl font-bold mt-1">M.Sc. (Cand.art)</h3>
+								<h3 class="text-2xl font-bold mt-1">M.Sc. (Cand.it)</h3>
 								<p class="text-lg text-zinc-700 font-medium flex items-center gap-x-2">
 									<svg
 										xmlns="http://www.w3.org/2000/svg"
@@ -254,7 +254,7 @@
 							<!-- Education Item -->
 							<div class="bg-white p-6 rounded-lg border border-zinc-200">
 								<p class="text-sm font-medium text-zinc-500">2014 - 2017</p>
-								<h3 class="text-2xl font-bold mt-1">B.A. (Bach.art)</h3>
+								<h3 class="text-2xl font-bold mt-1">B.A. (Cand.it)</h3>
 								<p class="text-lg text-zinc-700 font-medium flex items-center gap-x-2">
 									<svg
 										xmlns="http://www.w3.org/2000/svg"
@@ -297,7 +297,7 @@
 					</svg>
 					Skills & Expertise
 				</h2>
-				<div id="skills-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 max-w-7xl mx-auto">
+				<div id="skills-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 max-w-6xl mx-auto">
 					<!-- Card -->
 					<div class="skill-card bg-white p-6 rounded-lg border border-zinc-200">
 						<h3 class="text-lg font-bold mb-4 flex items-center gap-x-2">
@@ -314,7 +314,7 @@
 							Core Technologies
 						</h3>
 						<ul class="space-y-2 text-zinc-600">
-							<li>JavaScript (ES6+)</li>
+							<li>JavaScript</li>
 							<li>Python</li>
 							<li>API Integration</li>
 							<li>HTML5 & CSS3</li>
@@ -464,8 +464,8 @@
 						<h3 class="text-2xl font-bold mb-2">Data Layer Governance & Optimization</h3>
 						<p class="text-zinc-600 mb-4">
 							Optimized the Tealium iQ architecture for a leading insurance provider, which improved the quality and
-							governance of their data foundation. This initiative successfully reduced tag complexity and increased
-							site speed, enabling more accurate analytics.
+							governance of their data foundation. This initiative successfully reduced complexity enabling more
+							accurate analytics.
 						</p>
 						<div class="flex flex-wrap gap-2">
 							<span class="tech-tag">Tealium iQ</span><span class="tech-tag">JavaScript</span
