fix: Adjust scroll behavior for mobile screens in anchor links

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 						</svg>
 						About Me
 					</h2> -->
-					<p class="text-4xl font-light leading-snug">
+					<p class="text-4xl sm:text-2xl font-light leading-snug">
 						Marketing Technology Developer passionate about driving organizational change with data and automation. I
 						specialize in implementing robust analytics (Tealium IQ, Adobe Analytics, server-side tracking, CDP),
 						integrating APIs, and building A/B testing frameworks to foster conversion rate optimization and cost
