--- a/index.html
+++ b/index.html
@@ -69,24 +69,7 @@
 			<!-- Section 2: About Me -->
 			<section id="about" class="py-20 md:py-20">
 				<div class="max-w-4xl mx-auto gs_reveal">
-					<!-- <h2 class="text-xl font-medium text-zinc-600 mb-4 flex items-center gap-x-2">
-						<svg
-							xmlns="http://www.w3.org/2000/svg"
-							class="h-5 w-5"
-							fill="none"
-							viewBox="0 0 24 24"
-							stroke="currentColor"
-							stroke-width="2"
-						>
-							<path
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
-							/>
-						</svg>
-						About Me
-					</h2> -->
-					<p class="text-4xl sm:text-2xl font-light leading-snug">
+					<p class="text-xl md:text-4xl font-light leading-snug">
 						Marketing Technology Developer passionate about driving organizational change with data and automation. I
 						specialize in implementing robust analytics (Tealium IQ, Adobe Analytics, server-side tracking, CDP),
 						integrating APIs, and building A/B testing frameworks to foster conversion rate optimization and cost
