fix: Update stylesheet link from style.css to index.css

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 					<p class="text-lg text-zinc-600 mb-8 max-w-2xl mx-auto">
 						I'm always open to discussing new projects or opportunities.
 					</p>
-					<div class="flex justify-center items-center gap-x-8">
+					<div class="flex flex-col justify-center items-center gap-y-8">
 						<a
 							href="mailto:thomasmathiasen93@gmail.com"
 							class="text-xl font-medium underline hover:text-zinc-500 transition-colors inline-flex items-center gap-x-2"
