--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<!-- Section 2: About Me -->
 			<section id="about" class="py-20 md:py-20">
 				<div class="max-w-4xl mx-auto gs_reveal">
-					<p class="text-xl md:text-4xl font-light leading-snug">
+					<p class="text-2xl md:text-4xl font-light leading-snug">
 						Marketing Technology Developer passionate about driving organizational change with data and automation. I
 						specialize in implementing robust analytics (Tealium IQ, Adobe Analytics, server-side tracking, CDP),
 						integrating APIs, and building A/B testing frameworks to foster conversion rate optimization and cost
