--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 		<main class="container mx-auto px-6">
 			<!-- Section 1: Hero -->
-			<section id="hero" class="h-screen flex items-center">
+			<section id="hero" class="flex items-center">
 				<div class="w-full flex md:flex-row flex-col items-stretch justify-between">
 					<div class="flex items-center">
 						<h1 id="hero-title" class="text-7xl md:text-9xl font-bold tracking-tighter leading-none">
