fix: Correct typo in hero section subtitle for clarity

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						/> -->
 						<!-- Subtitle at the bottom-right -->
 						<p id="hero-subtitle" class="text-xl text-zinc-600 mt-4">
-							Specialized in A/B testing, data analytics, javascript, API integration and utilizing cutting-edge
+							Specialized in A/B testing, data analytics, javascript, API integration and utilizing cutting edge
 							technologies 😉
 						</p>
 					</div>
