Update title and job description in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Thomas Mathiasen - Marketing Technology Developer</title>
+		<title>Thomas Mathiasen - Senior Marketing Technology Developer</title>
 
 		<!-- Tailwind CSS CDN -->
 		<script src="https://cdn.tailwindcss.com"></script>
@@ -45,6 +45,7 @@
 				<div class="w-full flex md:flex-row flex-col items-stretch justify-between">
 					<div class="flex items-center">
 						<h1 id="hero-title" class="text-7xl md:text-9xl font-bold tracking-tighter leading-none">
+							<span class="hero-line"><span>Analytics &</span></span>
 							<span class="hero-line"><span>Marketing</span></span>
 							<span class="hero-line"><span>Technology</span></span>
 							<span class="hero-line"><span>Developer</span></span>
@@ -104,7 +105,7 @@
 							<!-- Experience Item -->
 							<div class="bg-white p-6 rounded-lg border border-zinc-200">
 								<p class="text-sm font-medium text-zinc-500">Apr 2023 - Present</p>
-								<h3 class="text-2xl font-bold mt-1">Digital Analytics and MarTech Developer</h3>
+								<h3 class="text-2xl font-bold mt-1">Senior Digital Analytics and MarTech Developer</h3>
 								<p class="text-lg text-zinc-700 font-medium flex items-center gap-x-2">
 									<svg
 										xmlns="http://www.w3.org/2000/svg"
