--- a/index.html
+++ b/index.html
@@ -69,7 +69,23 @@
 			<!-- Section 2: About Me -->
 			<section id="about" class="py-20 md:py-20">
 				<div class="max-w-5xl mx-auto gs_reveal">
-					<h2 class="text-xl font-medium text-zinc-600 mb-12 text-center">About Me</h2>
+					<h2 class="text-xl font-medium text-zinc-600 mb-12 flex items-center justify-center gap-x-2">
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="h-5 w-5"
+							fill="none"
+							viewBox="0 0 24 24"
+							stroke="currentColor"
+							stroke-width="2"
+						>
+							<path
+								stroke-linecap="round"
+								stroke-linejoin="round"
+								d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
+							/>
+						</svg>
+						About Me
+					</h2>
 
 					<div class="grid md:grid-cols-3 gap-8 mb-12">
 						<!-- Column 1 -->
